objects/PNP_Release__c.object
<CustomObject>
    <fields>
        <fullName>ATdb_PNP_url__c</fullName>
        <formula>IF(xATdb_pnp_id__c = 0,&quot;&quot;,&quot;https://atdb.btv.ibm.com/FindPNP.html?search_names=&amp;submit=Display+PNP+Information&amp;select_key_value=&quot; &amp; TEXT(xATdb_pnp_id__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATdb PNP url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATdb_ProductInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATdb_Product</label>
        <referenceTo>ATdb_product__c</referenceTo>
        <relationshipLabel>PNP_Releases</relationshipLabel>
        <relationshipName>PNP_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATdb_Product_url__c</fullName>
        <formula>IF(ATdb_ProductInfo__r.xATdb_product_id__c = 0,&quot;&quot;,&quot;https://atdb.btv.ibm.com/FindProduct.html?submit=true&amp;product_id=&quot; &amp; TEXT(ATdb_ProductInfo__r.xATdb_product_id__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATdb Product url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click to acknowledge receipt of this PNP Release</description>
        <inlineHelpText>Click to acknowledge receipt of this PNP Release</inlineHelpText>
        <label>Acknowledge Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acknowledged_By__c</fullName>
        <description>Who acknowledged receipt of this PNP and when</description>
        <label>Receipt Acknowledged By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_For_MFG_By__c</fullName>
        <description>By whom, and at what time, this PNP Release was Approved for Manufacturing</description>
        <inlineHelpText>By whom, and at what time, this PNP Release was Approved for Manufacturing</inlineHelpText>
        <label>Approved For MFG By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <description>If automatically creating this record, info will be stored here</description>
        <inlineHelpText>If automatically creating this record, info will be stored here</inlineHelpText>
        <label>Automated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Characterization_Percentage__c</fullName>
        <label>Characterization Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                    <default>true</default>
                    <label>50</label>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark this PNP Release completed</description>
        <inlineHelpText>Mark this PNP Release completed</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Comments__c</fullName>
        <description>Any comments relating to final completion and/or release to manufacturing</description>
        <inlineHelpText>Any comments relating to final completion and/or release to manufacturing</inlineHelpText>
        <label>Completion Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lot_Requested__c</fullName>
        <description>A particular lot to be used for validation</description>
        <inlineHelpText>A particular lot to be used for validation</inlineHelpText>
        <label>Lot Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Selected__c</fullName>
        <description>Lot actually used for verification - once completed, notification will be sent to TAE to validate results</description>
        <inlineHelpText>Lot actually used for verification - once completed, notification will be sent to TAE to validate results</inlineHelpText>
        <label>Lot Selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Size__c</fullName>
        <description>Lot size to be used for validation</description>
        <inlineHelpText>Lot size to be used for validation</inlineHelpText>
        <label>Lot Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                    <default>true</default>
                    <label>100</label>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Lot_Avail_pretest_hold_set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Choose this when no WIP available to test pnp</description>
        <inlineHelpText>Choose this when no WIP available to test pnp</inlineHelpText>
        <label>No Lot Avail - pretest hold set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSAT_Comments__c</fullName>
        <description>Comments re release progress</description>
        <inlineHelpText>Comments re release progress</inlineHelpText>
        <label>OSAT Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OSAT_Site__c</fullName>
        <description>Site to which PNP Release is being sent - this will affect who receives approval requests and who can see the record</description>
        <inlineHelpText>Site to which PNP Release is being sent - this will affect who receives approval requests and who can see the record</inlineHelpText>
        <label>OSAT Site</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amkor Singapore</fullName>
                </value>
                <value>
                    <fullName>Amkor Taiwan</fullName>
                </value>
                <value>
                    <fullName>Bromont</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNP_Release_Stage__c</fullName>
        <description>Current stage:
New (saved, not submitted by TAE)
Sent (submitted to, but not approved by, OSAT)
OSAT Accepted (OSAT has approved incoming object)
OSAT Done (OSAT submitted results for TAE approval)
Complete (TAE approved, PNP Release ready for mfg)</description>
        <inlineHelpText>Current stage:
New (saved, not submitted by TAE)
Sent (submitted to, but not approved by, OSAT)
OSAT Accepted (OSAT has approved incoming object)
OSAT Done (OSAT submitted results for TAE approval)
Complete (TAE approved, PNP Release ready for mfg</inlineHelpText>
        <label>PNP_Release Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>OSAT Accepted</fullName>
                </value>
                <value>
                    <fullName>OSAT Done</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNP_url__c</fullName>
        <description>Download URL for PNP</description>
        <inlineHelpText>Download URL for PNP</inlineHelpText>
        <label>PNP url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of releasing pnp</description>
        <inlineHelpText>Red: as soon as possible, Yellow: within a week, Green: within two weeks</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <default>true</default>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <color>#33CC00</color>
                    <label>Green</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Name of product for which pnp is being released</description>
        <inlineHelpText>Name of product for which pnp is being released</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Submit_to_TAE__c</fullName>
        <description>This PNP Release is ready to submit for TAE Approval once Lot Selected is complete, any comments have been added, and PNP is ready for correlation by TAE.</description>
        <formula>/*
New (saved, not submitted by TAE) 
Sent (sent to, but not approved by, OSAT) 
OSAT Accepted (OSAT has approved incoming object) 
OSAT Done (OSAT submitted results for TAE approval) 
Complete (TAE approved, PNP Release ready for mfg)
*/
IMAGE( 
  IF (
   ispickval(  PNP_Release_Stage__c, &quot;New&quot; ),
   &quot;/img/samples/flag_red.gif&quot;,
   IF (
    ispickval(  PNP_Release_Stage__c, &quot;Sent&quot; ),
    &quot;/img/samples/flag_red.gif&quot;,
    IF (
     AND (
      ispickval(  PNP_Release_Stage__c, &quot;OSAT Accepted&quot; ),
      NOT(ISBLANK( Lot_Selected__c ))
     ), &quot;/img/samples/flag_green.gif&quot;,
     IF (
      AND (
       ispickval(  PNP_Release_Stage__c, &quot;OSAT Done&quot; ),
       NOT(ISBLANK( Lot_Selected__c ))
      ), &quot;/img/samples/flag_red.gif&quot;,
      IF (
       ispickval(  PNP_Release_Stage__c, &quot;Complete&quot; ),
       &quot;/s.gif&quot;,
       &quot;/img/samples/flag_red.gif&quot;
      )
     )
    )
   )
  ),
&quot;Submit Ready Flag&quot;) &amp; &quot; &quot; &amp;
IF (OR (
   ispickval(  PNP_Release_Stage__c, &quot;New&quot; ),
   ispickval(  PNP_Release_Stage__c, &quot;Sent&quot; ),
   ispickval(  PNP_Release_Stage__c, &quot;OSAT Done&quot; ),
   ispickval(  PNP_Release_Stage__c, &quot;Complete&quot; )
  ), &quot;(Only valid after OSAT Approves release from TAE, and before OSAT Submits completion back to TAE)&quot;,
  IF (ISBLANK( Lot_Selected__c ),&quot;(Lot Selected needs a value)&quot;,
  &quot;Ready to Submit for Approval to TAE!&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This PNP Release is ready to submit for TAE Approval once Lot Selected is complete, any comments have been added, and PNP is ready for correlation by TAE.</inlineHelpText>
        <label>Ready to Submit to TAE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Comment__c</fullName>
        <description>Rich text field with any added information regarding this release</description>
        <inlineHelpText>Rich text field with any added information regarding this release</inlineHelpText>
        <label>Release Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request_By_Date__c</fullName>
        <label>Request By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StopProductionHighlight__c</fullName>
        <formula>IF (
ispickval(  Stop_Production__c , &quot;Yes&quot; ), IMAGE(&quot;/img/msg_icons/error32.png&quot;,&quot;RED&quot;) &amp; &quot; STOP PRODUCTION &quot; &amp; IMAGE(&quot;/img/msg_icons/error32.png&quot;,&quot;RED&quot;), &quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Production__c</fullName>
        <description>Whether to stop production until this PNP Release is complete</description>
        <inlineHelpText>Whether to stop production until this PNP Release is complete</inlineHelpText>
        <label>Stop Production</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TT_Change__c</fullName>
        <defaultValue>(&quot;Neutral&quot;)</defaultValue>
        <description>Expected change to test time</description>
        <inlineHelpText>Expected change to test time</inlineHelpText>
        <label>TT Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Decrease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <label>Tech</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xATdb_pnp_id__c</fullName>
        <externalId>true</externalId>
        <label>xATdb_pnp_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xATdb_product_id__c</fullName>
        <description>id for atdb product table</description>
        <externalId>true</externalId>
        <inlineHelpText>id for atdb product table</inlineHelpText>
        <label>xATdb_product_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xATdb_spinid__c</fullName>
        <description>unique record id for atdb table</description>
        <externalId>true</externalId>
        <inlineHelpText>unique record id for atdb table</inlineHelpText>
        <label>xATdb_spinid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PNP_Release</label>
    <listViews>
        <fullName>Active_PNP_Release_Requests</fullName>
        <columns>NAME</columns>
        <columns>Tech__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Lot_Requested__c</columns>
        <columns>Lot_Size__c</columns>
        <columns>Characterization_Percentage__c</columns>
        <columns>Stop_Production__c</columns>
        <columns>Lot_Selected__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active PNP Release Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_but_not_OSAT_Accepted</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Characterization_Percentage__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Stop_Production__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acknowledge__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active but not OSAT Accepted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ATdb_ProductInfo__c</columns>
        <columns>Priority__c</columns>
        <columns>Lot_Requested__c</columns>
        <columns>Lot_Size__c</columns>
        <columns>Characterization_Percentage__c</columns>
        <columns>Stop_Production__c</columns>
        <columns>Lot_Selected__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_PNP_Release_Requests</fullName>
        <columns>NAME</columns>
        <columns>Tech__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Lot_Requested__c</columns>
        <columns>Lot_Size__c</columns>
        <columns>Characterization_Percentage__c</columns>
        <columns>Stop_Production__c</columns>
        <columns>Lot_Selected__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Completed PNP Release Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PNP_Release_OSAT_Amkor_PNP_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>PNP_Release OSAT Amkor</label>
        <queue>PNP_Release_OSAT_Amkor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PNP_Release_OSAT_Bromont_PNP_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>PNP_Release OSAT Bromont</label>
        <queue>PNP_Release_OSAT_Bromont</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PNP_Release_PM_PNP_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>PNP_Release PM</label>
        <queue>PNP_Release_PM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>PNP_Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PNP_Releases</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Standard_record__c</fullName>
        <label>Standard_record</label>
    </sharingReasons>
    <validationRules>
        <fullName>PNP_Release_allow_to_complete</fullName>
        <active>true</active>
        <description>Make sure all required fields are filled out before allowing Complete to be checked</description>
        <errorConditionFormula>/* alert when complete box is checked and any of the progress fields isn&apos;t filled out */
AND(
  Complete__c  = TRUE,
  OR(
    OR(
      ISBLANK( Lot_Selected__c ),
      ISNULL( Lot_Selected__c )
    ),
    Acknowledge__c = FALSE /*,
    LEN( Progress_Comments__c ) = 0 */
  )
)</errorConditionFormula>
        <errorMessage>The Acknowledge checkbox, and Selected Lot must be set before this can be marked Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PNP_Release_no_OSAT_fields_before_Accept</fullName>
        <active>true</active>
        <description>Make sure OSAT fields aren&apos;t set before OSAT Accepted stage</description>
        <errorConditionFormula>AND(
NOT( $User.Email = &apos;tim.curtin@globalfoundries.com&apos; ),
NOT( $User.Email = &apos;dellboomi.support@globalfoundries.com&apos; ), 
OR(
   ISPICKVAL( PNP_Release_Stage__c , &quot;New&quot;),
   ISPICKVAL( PNP_Release_Stage__c , &quot;Sent&quot;),
   ISNEW()
),
OR(
  NOT(
    OR(
      ISBLANK( Lot_Selected__c ),
      ISNULL( Lot_Selected__c )
    )
  ),
  Acknowledge__c = TRUE,
  No_Lot_Avail_pretest_hold_set__c  = TRUE,
  Complete__c  = TRUE,
  NOT(
    LEN( OSAT_Comments__c ) = 0
  )
)
)</errorConditionFormula>
        <errorMessage>The No Lot Avail, Selected Lot, and OSAT Comments cannot be set before OSAT has Approved the PNP Release</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PNP_Release_no_taking_back_complete</fullName>
        <active>true</active>
        <description>Ensure complete field can&apos;t be uncompleted</description>
        <errorConditionFormula>AND(
  Complete__c = FALSE,
  NOT( $User.Email = &apos;tim.curtin@globalfoundries.com&apos;),
  NOT( $User.Email = &apos;dellboomi.support@globalfoundries.com&apos; ), 
  ISCHANGED(  Complete__c ),
  NOT ( $User.Email =  Approved_For_MFG_By__c )
)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>Completion can&apos;t be removed from a record by anyone other than the person who marked it complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PNP_Release_nochanges_after_OSAT_Done</fullName>
        <active>true</active>
        <description>Ensure no Info or OSAT fields are changed after OSAT sends back to TAE</description>
        <errorConditionFormula>AND(
  ISPICKVAL( PNP_Release_Stage__c , &quot;OSAT Done&quot;) ,
  NOT( $User.Email = &apos;tim.curtin@globalfoundries.com&apos; ),
  NOT( $User.Email = &apos;dellboomi.support@globalfoundries.com&apos; ), 
  OR(
    ISCHANGED(  Priority__c ),
    ISCHANGED(   ATdb_ProductInfo__c    ),
    ISCHANGED(  Name  ),
    ISCHANGED(  Release_Comment__c ),
    ISCHANGED(  Lot_Requested__c ),
    ISCHANGED(  Lot_Size__c  ),
    ISCHANGED( Characterization_Percentage__c ),
    ISCHANGED(  Product_Name__c  ),
    ISCHANGED(   Stop_Production__c   ),
    ISCHANGED( Acknowledge__c ),
    ISCHANGED( No_Lot_Avail_pretest_hold_set__c ),
    ISCHANGED( Lot_Selected__c),
    ISCHANGED( OSAT_Comments__c) /*,
    ISCHANGED( Completion_Comments__c) */
  )
)</errorConditionFormula>
        <errorMessage>Information and OSAT fields can&apos;t be changed once a record has been sent to TAE for final approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PNP_Release_nochanges_after_sent_to_osat</fullName>
        <active>true</active>
        <description>Ensure Basic Info fields aren&apos;t changed after record is sent to OSAT for acceptance</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( PNP_Release_Stage__c , &quot;New&quot;)),
OR(
ISCHANGED(  Priority__c ),
ISCHANGED(   ATdb_ProductInfo__c    ),
ISCHANGED(  Name  ),
ISCHANGED(  Release_Comment__c ),
ISCHANGED(  Lot_Requested__c ),
ISCHANGED(  Lot_Size__c  ),
ISCHANGED( Characterization_Percentage__c ),
ISCHANGED(  Product_Name__c  ),
ISCHANGED(   Stop_Production__c   )
),
NOT( $User.Email = &apos;tim.curtin@globalfoundries.com&apos; ),
NOT( $User.Email = &apos;dellboomi.support@globalfoundries.com&apos; )
)</errorConditionFormula>
        <errorMessage>The Basic Information fields for a record can&apos;t be changed after it is submitted to OSAT for Approval.  In order to edit: Recall the Approval, or ask OSAT to Reject if they&apos;ve already accepted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PNP_Release_valid_prodname</fullName>
        <active>true</active>
        <description>Ensure that product name is entered and valid</description>
        <errorConditionFormula>AND(
ISBLANK(  ATdb_ProductInfo__c  ),
NOT ( $User.Email = &apos;tim.curtin@globalfoundries.com&apos;),
NOT( $User.Email = &apos;dellboomi.support@globalfoundries.com&apos; )
)</errorConditionFormula>
        <errorMessage>Please choose a Product using the ATdb Product lookup field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PNP_Release_valid_releasename</fullName>
        <active>false</active>
        <description>Ensure that pnp release name entered is in format AGMS.71.00001DV163.RELBSDQFMA</description>
        <errorConditionFormula>AND(
NOT(REGEX( Name , &quot;[A-Z]{4}\\.[0-9]{2}\\.[A-Z0-9]{10}\\.[A-Z0-9]{10}&quot;) ),
NOT( $User.Email = &apos;tim.curtin@globalfoundries.com&apos;),
NOT( $User.Email = &apos;dellboomi.support@globalfoundries.com&apos; )
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>PNP Release name must be in the format AGMS.71.00001DV163.RELBSDQFMA</errorMessage>
    </validationRules>
</CustomObject>